Fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   --fw-bold: 600;
   --fw-very-bold: 800;
 
-  --bs-light: 0em 0em 0.5em hsl(0 0% 0% / 0.15);
+  --bs-light: 0em 0em 0.5em hsl(0 0% 0% / 0.2);
   --bs-dark: 0em 0.1em 0.3em hsl(0 0% 0% / 0.2);
 }
 
